<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegisterActivity">

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/registerEmailText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/registerUserNameText" android:hint="@string/email"
            android:layout_marginStart="32dp" android:layout_marginEnd="32dp"
            android:textColor="@android:color/darker_gray"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/registerUserNameText" android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="32dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.5"
            android:hint="@string/user_name" android:textColor="@android:color/darker_gray"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/registerPasswordText"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" android:hint="@string/password" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/registerEmailText" android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp" android:textColor="@android:color/darker_gray"/>
    <TextView
            android:text="@string/tap_to_generate_user_avater"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/registerPasswordText"/>
    <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp" app:srcCompat="@drawable/profiledefault"
            android:id="@+id/createAvaterImageView"
            android:contentDescription="@string/app_name"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2" android:clickable="true"
            android:onClick="generateUserAvarter"/>
    <Button
            android:text="Generate Background Color"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/backgroundColorButton" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/colorPrimary" android:layout_marginStart="32dp" android:layout_marginEnd="32dp"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/createAvaterImageView"
            android:textColor="@android:color/white" android:onClick="generateBackgorundClicked"/>
    <Button
            android:text="Register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/registerButton" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="32dp" android:layout_marginEnd="32dp" android:textColor="@android:color/white"
            android:background="@color/colorPrimary" android:onClick="registerButtonClicked"/>
</android.support.constraint.ConstraintLayout>